ace/toolkit-tracing/toolkit-tracing-destination-rules.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: toolkit-tracing-dr-1
spec:
  host: toolkit-tracing-is
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: toolkit-tracing-dr-2
spec:
  host: toolkit-tracing-v2-is
