ace/toolkit-tracing/toolkit-tracing-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: toolkit-tracing-vs
spec:
  hosts:
  - "*"
  gateways:
  - toolkit-tracing-gw
  http:
  - match:
    - headers:
        X-ABTEST:
          exact: TEST
    route:
    - destination:
        host: toolkit-tracing-is
        port:
          number: 7800
      weight: 50
    - destination:
        host: toolkit-tracing-v2-is
        port:
          number: 7800
      weight: 50
